fixes alignment of carousel items so that scrollbar does not overlap copy

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -16282,7 +16282,7 @@ div#em-containerPartners div#em-partnersPostsWrapper {
   border-color: #228D98;
   border-width: 15px;
   background-color: #093A6B;
-  padding: 1.5rem;
+  padding: 0.5rem;
   height: 40rem;
 }
 
@@ -16302,15 +16302,18 @@ div#em-containerPartners div#em-partnersPostsWrapper div.carousel-inner div.caro
 
 div#em-containerPartners div#em-partnersPostsWrapper div.carousel-item-img {
   position: absolute;
-  height: 8rem;
+  height: 9.5rem;
   display: flex;
   align-items: center;
+  justify-content: center;
+  padding: 0 1rem 0 1rem;
 }
 
 div#em-containerPartners div#em-partnersPostsWrapper div.carousel-item-copy {
-  height: 25.5rem;
+  height: 20rem;
   overflow: auto;
   margin: 10rem 0 0 0;
+  padding: 0 1rem 0 1rem;
 }
 
 div#em-containerPartners div#em-partnersPostsWrapper div.carousel-item-button {
@@ -16318,6 +16321,7 @@ div#em-containerPartners div#em-partnersPostsWrapper div.carousel-item-button {
   top: 32rem;
   display: flex;
   width: 100%;
+  padding: 0 1rem 0 1rem;
 }
 
 div#em-containerPartners div#em-partnersPostsWrapper div.carousel-item-button button {
@@ -16336,15 +16340,15 @@ div#em-containerPartners div#em-partnersPostsWrapper div.carousel-item-button bu
 }
 
 div#em-containerPartners div#em-partnersPostsWrapper button.carousel-control-prev {
-  left: -4rem;
+  left: -3.5rem;
 }
 
 div#em-containerPartners div#em-partnersPostsWrapper button.carousel-control-next {
-  right: -4rem;
+  right: -3.5rem;
 }
 
 div#em-containerPartners div#em-partnersPostsWrapper div.carousel-indicators {
-  bottom: -5.5rem;
+  bottom: -6.5rem;
 }
 
 div#em-containerPartners div#em-partnersListWrapper {
