--- a/src/sass/sections/em-partners.scss
+++ b/src/sass/sections/em-partners.scss
@@ -26,7 +26,7 @@ div#em-containerPartners {
         border-color: variables.$turquoise;
         border-width: 15px;
         background-color: variables.$darkblue;
-        padding: 1.5rem;
+        padding: 0.5rem;
         height: 40rem;
         p {
             color: variables.$lightgrey;
@@ -43,15 +43,18 @@ div#em-containerPartners {
 
         div.carousel-item-img {
             position: absolute;
-            height: 8rem;
+            height: 9.5rem;
             display: flex;
             align-items: center;
+            justify-content: center;
+            padding: 0 1rem 0 1rem;
         }
 
         div.carousel-item-copy {
-            height: 25.5rem;
+            height: 20rem;
             overflow: auto;
             margin: 10rem 0 0 0;
+            padding: 0 1rem 0 1rem;
         }
 
         div.carousel-item-button {
@@ -59,6 +62,7 @@ div#em-containerPartners {
             top: 32rem;
             display: flex;
             width: 100%;
+            padding: 0 1rem 0 1rem;
             button {
                 @include em-mixins.bold-button(variables.$lightgrey, variables.$turquoise);
                 font-size: 0.8rem;
@@ -66,13 +70,13 @@ div#em-containerPartners {
         }
 
         button.carousel-control-prev {
-            left: -4rem;
+            left: -3.5rem;
         }
         button.carousel-control-next {
-            right: -4rem;
+            right: -3.5rem;
         }
         div.carousel-indicators {
-            bottom: -5.5rem;
+            bottom: -6.5rem;
         }
 
     }
